--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@
             *::after {
                 margin: 0;
                 padding: 0;
-                box-sizing: border-box;
+                width: 100%;
+
             }
     
             html, body {
+                margin: 0;
+                padding: 0;
                 width: 100%;
                 height: 100%;
+                overflow: hidden;
+            }
+            canvas{
+                display: block;
             }
     
             body {
@@ -42,7 +49,6 @@
         </style>
     </head>
     <body>
-        <div id="game-container"></div>
         <script src="./phaser.js"></script>
         <script type="module" src="./src/main.js"></script>
     </body>
