--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
             *::after {
                 margin: 0;
                 padding: 0;
-                width: 100%;
+                box-sizing: border-box;
 
             }
     
             html, body {
-                margin: 0;
-                padding: 0;
                 width: 100%;
                 height: 100%;
-                overflow: hidden;
             }
             canvas{
                 display: block;
@@ -49,6 +46,7 @@
         </style>
     </head>
     <body>
+        <div id="game-container"></div>
         <script src="./phaser.js"></script>
         <script type="module" src="./src/main.js"></script>
     </body>
